--- a/projects.html
+++ b/projects.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/assets/kmads_logo_zoomedout.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Kaique Souza's Portfolio" />
-    <title>kmadsdev | home</title>
+    <meta name="description" content="Kmadsdev's Projects" />
+    <title>kmadsdev | projects</title>
     <!-- Dev Module -->
     <!-- -->
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <script type="module" crossorigin src="/assets/main-C_UIU2AR.js"></script>
+  <script type="module" crossorigin src="/assets/projects-DMo4MErH.js"></script>
   <link rel="modulepreload" crossorigin href="/assets/lenis-D-hBTY3m.js">
   <link rel="stylesheet" crossorigin href="/assets/lenis-edI-8rJa.css">
-  <link rel="stylesheet" crossorigin href="/assets/main-DsQCOzQh.css">
 </head>
 <body>
     <div id="root"></div>
