--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- Dev Module -->
     <!-- -->
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <script type="module" crossorigin src="/assets/main-C_UIU2AR.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/lenis-D-hBTY3m.js">
+  <script type="module" crossorigin src="/assets/main-DVWDTe9o.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/lenis-B6-H-ZlR.js">
   <link rel="stylesheet" crossorigin href="/assets/lenis-edI-8rJa.css">
   <link rel="stylesheet" crossorigin href="/assets/main-DsQCOzQh.css">
 </head>
