--- a/projects.html
+++ b/projects.html
@@ -9,9 +9,9 @@
     <!-- Dev Module -->
     <!-- -->
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <script type="module" crossorigin src="/assets/projects-6-GWoqgf.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/lenis-B6-H-ZlR.js">
-  <link rel="stylesheet" crossorigin href="/assets/lenis-edI-8rJa.css">
+  <script type="module" crossorigin src="/assets/projects-B573TJq6.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/ProjectsPage-D27Vp1rX.js">
+  <link rel="stylesheet" crossorigin href="/assets/ProjectsPage-ZNckM7OZ.css">
 </head>
 <body>
     <div id="root"></div>
