--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <!-- Dev Module -->
     <!-- -->
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <script type="module" crossorigin src="/assets/main-DVWDTe9o.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/lenis-B6-H-ZlR.js">
-  <link rel="stylesheet" crossorigin href="/assets/lenis-edI-8rJa.css">
-  <link rel="stylesheet" crossorigin href="/assets/main-DsQCOzQh.css">
+  <script type="module" crossorigin src="/assets/main-Cy2MRqFF.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/ProjectsPage-D27Vp1rX.js">
+  <link rel="stylesheet" crossorigin href="/assets/ProjectsPage-ZNckM7OZ.css">
+  <link rel="stylesheet" crossorigin href="/assets/main-DV9zLQld.css">
 </head>
 <body>
     <div id="root"></div>
