--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <!-- Dev Module -->
     <!-- -->
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <script type="module" crossorigin src="/assets/main-5MtI3-58.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/ProjectsPage-DWmWftIc.js">
-  <link rel="stylesheet" crossorigin href="/assets/ProjectsPage-C1puo1XJ.css">
+  <script type="module" crossorigin src="/assets/main-fgFUynEe.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/ProjectsPage-DX_9fcZj.js">
+  <link rel="stylesheet" crossorigin href="/assets/ProjectsPage-aJcAmLWu.css">
   <link rel="stylesheet" crossorigin href="/assets/main-DV9zLQld.css">
 </head>
 <body>
